# amz13project

./: .gitignore  main.py  newProductidCheck.py  productidIteration.py  pyproject.toml
data/: dbconfig.py  file_infomations.py  returned_data.py
utils/: csvEncodingTest.py  data_cleaning.py  exportToDatabase.py  file_processing.py  findSingleDocument.py
